[package]
name = "piltover"
version = "0.1.0"
edition = "2021"

[dependencies]
cainome = { git = "https://github.com/cartridge-gg/cainome", rev = "v0.4.11", features = ["abigen-rs"] }
starknet = "0.12"

[lib]
name = "piltover_bindings"
path = "src/lib.rs"

[[bin]]
name = "generator"
path = "src/bin.rs"
